--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./css-file/style.css">
 </head>
 <body>
-
+<div class="header">
+    <div class="header-logo">Header Logo</div>
+    <div class="header-links">
+        <div><a href=#>header link one</a></div>
+        <div><a href=#>header link two</a></div>
+        <div><a href=#>header link three</a></div>
+    </div>
+</div>
 </body>
 </html>
