Add the hero portion of the page

--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
         <div><a href=#>header link three</a></div>
     </div>
 </div>
+<div class="underheader-container">
+    <div class="website-title-container">
+        <div class="website-title">This website is awesome</div>
+        <p class="hero-description">This website has some subtext that goes under the main page. It's a smaller font and the color is lower contrast</p>
+        <button class="signup-button">Sign up</button>
+    </div>
+        <img src="./images/bigisland.jpg" alt="a picture of a palm in front of the ocean during sunset with a sailboat in the background">
+</div>
 </body>
 </html>
