Add info and pictures to the body

--- a/index.html
+++ b/index.html
@@ -23,5 +23,26 @@
     </div>
         <img src="./images/bigisland.jpg" alt="a picture of a palm in front of the ocean during sunset with a sailboat in the background">
 </div>
+
+<div class="some-info-header">Tropical life like never seen before</div>
+<div class="images-and-text-container">
+    <div class="info">
+      <img src="./images/bigislandplanelanding.jpg" alt="a plane landing over the ocean">
+      <div>The anticipation of a vacation's start is such a wonderful feeling!</div>
+    </div>
+    <div class="info">
+        <img src="./images/bigislandbeachgirl.jpg" alt="a picture of a beach and people in the water and ashore">
+        <div>Beach time in a tropical location never disappoints!</div>
+      </div>
+      <div class="info">
+        <img src="./images/sunsetpalm.jpg" alt="a picture of a palm in front of the ocean during sunset">
+        <div>If you haven't seen a sunset in Hawaii, you have not seen a sunset at all!</div>
+      </div>
+      <div class="info">
+        <img src="./images/sunsetsurfer.jpg" alt="a picture of a surfer riding a wave during sunset with the bright sun in the background">
+        <div>Sunkissed surfers know their point break</div>
+      </div>
+</div>
+
 </body>
 </html>
