Add quote with signature

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </div>
 <div class="underheader-container">
     <div class="website-title-container">
-        <div class="website-title">This website is awesome</div>
-        <p class="hero-description">This website has some subtext that goes under the main page. It's a smaller font and the color is lower contrast</p>
+        <div class="website-title">Your next dream vacation starts here</div>
+        <p class="hero-description">This website is here to help you plan your next trip. Dive into the ocean of trip planning by signing up below</p>
         <button class="signup-button">Sign up</button>
     </div>
         <img src="./images/bigisland.jpg" alt="a picture of a palm in front of the ocean during sunset with a sailboat in the background">
@@ -42,6 +42,13 @@
         <img src="./images/sunsetsurfer.jpg" alt="a picture of a surfer riding a wave during sunset with the bright sun in the background">
         <div>Sunkissed surfers know their point break</div>
       </div>
+</div>
+<div class="quote-main-container">
+    <div class="quote-and-signature-container">
+        <p class="quotation"> “Twenty years from now you will be more disappointed by the things you didn’t do than by the ones you did do. So throw off the bowlines. Sail away from the safe harbor. Catch the trade winds in your sails. Explore. Dream. Discover.”
+        </p>
+        <div class="quote-signature"> - Mark Twain</div>
+    </div>
 </div>
 
 </body>
