--- a/index.html
+++ b/index.html
@@ -53,13 +53,16 @@
 <div class="action-outer-container">
     <div class="action-main-container">
         <div class="action-text-container">
-          <div class="call-to-action">Call to action! It's time!</div>
+          <div class="call-to-action">It's time to book your next dream vacation!</div>
           <div class="signup-subtext">Sign up for our product by clicking that button right over there!</div>
         </div>
         <div class="button-container">
           <button class="signup-button lowerbutton">Sign up</button>
         </div>
     </div>
+</div>
+<div class="footer">
+    Copyright © The Odin Project and Kirk Vino 2024
 </div>
 </body>
 </html>
