Update logo and links with actual words

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 <div class="header">
-    <div class="header-logo">Header Logo</div>
+    <div class="header-logo">Tantalizing Trips</div>
     <div class="header-links">
-        <div><a href=#>header link one</a></div>
-        <div><a href=#>header link two</a></div>
-        <div><a href=#>header link three</a></div>
+        <div><a href=#>Ocean</a></div>
+        <div><a href=#>Sun</a></div>
+        <div><a href=#>Paradise</a></div>
     </div>
 </div>
 <div class="underheader-container">
